Future
	Change IIS site bindings
	General IIS configurations (i.e. compression)

0.0.24
	Changed rest_uri to be under wt_dx rather then wt_analytics_ui
	Removed rest_uri from default attributes

0.0.23
	Cookbook renamed to wt_analytics_ui
	Share wrs folder
	Added log4net.config template

0.0.22
	Added UI user to MachineKeys folder
	Added UI user to Performance Monitor Users

0.0.21
	Added PatentsLink configuration item to appSettings in web.config template
	Added many new attributes
	Added mapping.xml.erb and webtrends-brand.xml.erb
	Removed install_logdir creation

0.0.18
	Added hbase values to web.config template