@@ -7,7 +7,7 @@
         "ondemand_base": "= 1.7.3", 
         "storm": "= 1.0.16", 
         "windows": "= 1.2.12", 
-        "wt_analytics_ui": "= 0.0.23", 
+        "wt_analytics_ui": "= 0.0.24", 
         "wt_base": "= 0.10.53", 
         "wt_cam": "= 1.0.4", 
         "wt_monitoring": "= 0.0.2", 
@@ -168,13 +168,12 @@
             "download_url": "http://teamcity.webtrends.corp/guestAuth/repository/download/bt144/23421:id/AnalyticsUI.zip", 
             "fb_app_clientid": "119772538146833", 
             "fb_app_clientsecret": "3622dee4341c3ab15076ce92caa0a71c", 
-            "help_link": "http://help-release.itl.webtrends.corp/{0}/analytics10/", 
+            "help_link": "http://help-release.webtrends.corp/{0}/analytics10/", 
             "hmap_url": "", 
             "ondemand_base_domain": "cod.webtrends.com", 
             "proxy_address": "http://sproxy02.staging.dmz:3128", 
             "proxy_enabled": "true", 
             "reinvigorate_tracking_code": "fv6b7-9x820v8963", 
-            "rest_base_uri": "https://cdx.webtrends.com/v3", 
             "show_profiling": "true", 
             "tagbuilder_download_url": "https://stb.webtrends.com", 
             "tagbuilder_url_template": "https://stb.webtrends.com/ws/{0}/{1}{2}"
@@ -212,6 +211,7 @@
             "cacheenabled": "True", 
             "cachename": "C_DX", 
             "endpoint_address": "net.tcp://csearch.staging.dmz:8096/SearchService/Search", 
+            "rest_base_uri": "https://cdx.webtrends.com/v3", 
             "website_name": "DX", 
             "website_port": "80"
         }, 
@@ -220,7 +220,7 @@
             "sched_host": "cmasterdb01.staging.dmz"
         }, 
         "wt_messaging_monitoring": {
-            "monitor_service_addr": "serviceBusMonitoring@cds01.staging.dmz"
+            "monitor_hostname": "cds01.staging.dmz"
         }, 
         "wt_monitoring": {
             "audit_bucket_timespan": 10, 
@@ -243,8 +243,11 @@
             "rta_host": "crta01.staging.dmz"
         }, 
         "wt_search": {
-            "search_hostname": "csearch.staging.dmz", 
-            "search_service": "net.tcp://csearch.staging.dmz:8096/Search/Service"
+            "download_url": "http://teamcity.webtrends.corp/guestAuth/repository/download/bt157/23495:id/Search.zip", 
+            "search_hostname": "csearch.staging.dmz"
+        }, 
+        "wt_sync": {
+            "download_url": "http://teamcity.webtrends.corp/guestAuth/repository/download/bt158/24176:id/SyncService.zip"
         }, 
         "wt_usagedb": {
             "schedulerdb_host": "cusagedb01.staging.dmz", 
